# claude-pdf-transformer

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
src/pdf_transformer/: __init__.py  cli.py  compressor.py  inspector.py  pipeline.py  splitter.py
tests/: conftest.py  test_cli.py  test_compressor.py  test_inspector.py  test_pipeline.py  test_splitter.py
