[project]
name = "claude-pdf-transformer"
version = "0.1.0"
description = "Transform a directory of PDFs to comply with Anthropic's multimodal PDF limits (size and page count) by splitting and compressing."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "John F. Mercer" }]
requires-python = ">=3.13"
dependencies = [
    "pypdf>=5.1",
    "typer>=0.15",
]

[project.urls]
Repository = "https://github.com/jfmercer/claude-pdf-transformer"

[project.scripts]
pdf-transformer = "pdf_transformer.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-cov>=6",
    "reportlab>=4.2",
    "ruff>=0.15.22",
]

[build-system]
requires = ["uv_build>=0.11.26,<1"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pdf_transformer"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "PTH",   # flake8-use-pathlib
    "S",     # flake8-bandit (security)
    "C90",   # mccabe cyclomatic complexity
    "PLR09", # pylint refactor caps (too many args/branches/statements)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 6 # keyword-only threshold params (max_size_mb, max_pages, …) thread through

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # asserts are the point of tests
"src/pdf_transformer/cli.py" = ["PLR0913"] # one flag per CLI option is inherent to Typer

[tool.mypy]
strict = true
python_version = "3.13" # enforce the floor even when run on newer interpreters
files = ["src", "tests"]
mypy_path = ["src"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "reportlab.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["pdf_transformer"]
branch = true

[tool.coverage.report]
fail_under = 95
